--- a/va-validation-behavior.html
+++ b/va-validation-behavior.html
@@ -122,7 +122,7 @@
   ];
   
   function isValidator(vldtr) {
-    return !vldtr || typeof vldtr !== 'function';
+    return vldtr && typeof vldtr === 'function';
   }
   
 }());
